<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iceoryx_ros2_bridge</name>
  <version>0.0.0</version>
  <description>iceoryx bridge to a different ROS2 rmw interface</description>
  <maintainer email="karsten.knese@us.bosch.com">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>iceoryx_posh</depend>
  <depend>iceoryx_hoofs</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rmw_iceoryx_cpp</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
