<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmw_iceoryx_cpp</name>
  <version>0.0.0</version>
  <description>rmw implementation for Bosch's zero copy middleware iceoryx</description>
  <maintainer email="karsten.knese@us.bosch.com">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>iceoryx_posh</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rmw_implementation</depend>
  <depend>rosidl_generator_c</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
